# tosa-roller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac
data/: legacy1-ext.json  legacy2.json  modern-chaos.json  modern.json  roles.json  schema.json  tosa-chaos.json  tosa-legacy1-base.json  tosa-legacy1.json  tosa-legacy2.json  tosa-standard.json  tosa-tweaked.json  tweaked.json  vanilla1-ext.json  vanilla1.json  vanilla2.json
lib/: CMakeLists.txt
presets/: all-any.txt  corporate-ranked-practice.txt  coven-ranked-practice.txt  draculas-palace.txt  elementals-ranked-practice.txt  phantasmal-frenzy.txt  spirits-ranked-practice.txt  true-all-any.txt  wandering-souls.txt
src/: Main.java  main.cpp
src/alignment/: alignment.cpp  alignment.hpp
src/data/: Entry.java
src/error/: error.cpp  error.hpp
src/faction/: faction.cpp  faction.hpp
src/group/: group.cpp  group.hpp
src/list-entry/: list-entry.cpp  list-entry.hpp
src/role/: role.cpp  role.hpp
src/role-list/: role-list.cpp  role-list.hpp
